--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
     <section>
         <div class="round">
             <img src="emoji1.png" alt="" width="200px" height="200px" class="emoji"><br><br>
-           
+        </div>
+        <div>
             <h1 class="name">HELLO  ,  I am Ramyashri   </h1><br><br>
             <p class="para"> Tech Enthusiast | Front end web developer | programmer </p><br><br>
             <button class="btn info">Contact Me</button>
