--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="main">
             <h1 >HELLO  ,  I am Ramyashri   </h1><br><br>
-            <p > Tech Enthusiast | Front end web developer | programmer </p><br><br>
+            <p class="para"> Tech Enthusiast | Front end web developer | programmer </p><br><br>
             <button class="btn info">Contact Me</button>
         </div>
     </section>
