--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <img src="emoji1.png" alt="" width="200px" height="200px" class="emoji"><br><br>
         </div>
         <div class="main">
-            <h1 >HELLO  ,  I am Ramyashri   </h1><br><br>
+            <h1 class="name">HELLO  ,  I am Ramyashri   </h1><br><br>
             <p class="para"> Tech Enthusiast | Front end web developer | programmer </p><br><br>
             <button class="btn info">Contact Me</button>
         </div>
