--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <header>my website</header>
         
         <ul>
-            <li><a href="#"><i class="fa fa-home"></i>Home</a></li>
+            <li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
             <li><a href="#"><i class="fas fa-user"></i>About Me</a></li>
             <li><a href="#"><i class="fas fa-graduation-cap"></i>education</a></li>
             <li><a href="#"><i class="fas fa-award"></i>certificate</a></li>
