--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
         <ul>
             <li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
-            <li><a href="#"><i class="fas fa-user"></i>About Me</a></li>
+            <li><a href="about.html"><i class="fas fa-user"></i>About Me</a></li>
             <li><a href="#"><i class="fas fa-graduation-cap"></i>education</a></li>
             <li><a href="#"><i class="fas fa-award"></i>certificate</a></li>
             <li><a href="#"><i class="far fa-lightbulb"></i>Skills</a></li>
