--- a/about.html
+++ b/about.html
@@ -6,6 +6,22 @@
     <title>About me</title>
 </head>
 <body>
-    <h1>Ramya</h1>
+    <section id="about">
+        <div class="container">
+            <div class="row">
+            <div class="col-md-5">
+                    <div class="about-img">
+                        <img  class="shape" src="ramya.jpg" alt="">
+                    </div>
+            </div>
+            <br>
+            <div class="col-md-7 about-right">
+                <h2 class="color-3"><b>About Me</b></h2>
+                <p class="p-first text-white"></p>
+            </div>
+            </div>
+        </div>
+
+    </section>
 </body>
 </html>
