--- a/about.html
+++ b/about.html
@@ -3,25 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <link rel="stylesheet" href="aboutme.css">
+    <title>About </title>
 </head>
 <body>
-    <section id="about">
-        <div class="container">
-            <div class="row">
-            <div class="col-md-5">
-                    <div class="about-img">
-                        <img  class="shape" src="ramya.jpg" alt="">
-                    </div>
-            </div>
-            <br>
-            <div class="col-md-7 about-right">
-                <h2 class="color-3"><b>About Me</b></h2>
-                <p class="p-first text-white"></p>
-            </div>
-            </div>
+    <div class="container">
+    <div class="rounded"> 
+        <img src="ramya.jpg" alt="" width="300px" height="300px">
+    </div>
+        <div >
+            <h1 class="text" >Ramya</h1>
         </div>
-
-    </section>
+    </div>
 </body>
 </html>
