--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 
 </head>
 <body>
-   
+   <div class="loading">
+       <span class="loader">Loading...</span>
+       <span class="animation1"></span>
+       <span class="animation2"></span>
+   </div>
     
     <input type ="checkbox" id="check">
     <label for="check">
