--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="aboutme.css">
     <title>About </title>
 </head>
@@ -11,8 +12,11 @@
     <div class="rounded"> 
         <img src="ramya.jpg" alt="" width="300px" height="300px">
     </div>
-        <div >
-            <h1 class="text" >Ramya</h1>
+        <div class="text">
+            <h2><u>About me</u></h2>
+            <h2>About me</h2>
+            <p class="para"> I am a second year technical undergraduate studying at Sahyadri College of Engineering and Management, Mangalore.</p>
+            
         </div>
     </div>
 </body>
