--- a/index.html
+++ b/index.html
@@ -7,15 +7,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
 
 </head>
 <body>
-   <div class="loading">
+   <div class="loading" id="loader">
        <span class="loader">Loading...</span>
        <span class="animation1"></span>
        <span class="animation2"></span>
    </div>
-    
+   <script>
+       $(window).on("load",function(){
+           $(".loading").fadeOut(1000);
+       });
+   </script>
+   
     <input type ="checkbox" id="check">
     <label for="check">
         <i class="fas fa-bars" id="btn"></i>
