--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Ubuntu+Condensed&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="aboutme.css">
     <title>About </title>
 </head>
@@ -13,10 +13,13 @@
         <img src="ramya.jpg" alt="" width="300px" height="300px">
     </div>
         <div class="text">
-            <h2><u>About me</u></h2>
-            <h2>About me</h2>
-            <p class="para"> I am a second year technical undergraduate studying at Sahyadri College of Engineering and Management, Mangalore.</p>
+            <h2> < About me > </About></h2>
+            <h2> < About me > </h2>
+            <p class="para"> I am Ramyashi. Tech Enthusiast . Born on 5th January 2001 . My native is Udupi ."Be Hungry for knowledge , the whole thing is to learn everyday." This line keeps  always me motivated.  Curious to know about new technologies.Learning new things and scaling up my skills is my nature.
             
+            <br> <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; My love towards technologies inspired me to take up Computer Science  as my degree. Currently I am persuing my third year of Engineering Degree from Sahyadri college of Engineering and management Adyar,Mangalore.
+            <br><br><br><button class="btn info"> View Resume</button>
+        </p>
         </div>
     </div>
 </body>
