--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,30 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 </head>
 <body>
+    <div class="text">
+    <h2  > Contact Me </h2>
+    <h2 > Contact Me </h2>
+    </div>
     <div class="middle">
         <a class ="btn" href="#">
             <i class="fab fa-facebook-f"></i>
         </a>
-        <a class ="btn" href="#" >
+        <a class ="btn" href="twitter.com/Ramyash80437111" >
             <i class="fab fa-twitter"></i>
         </a>
-        <a class ="btn" href="#">
+        <a class ="btn" href="instagram.com/ramyashri_hebbar">
             <i class="fab fa-instagram"></i>
         </a>
-        <a  class ="btn" href="#">
+        <a  class ="btn" href="https://www.linkedin.com/in/ramyashri-hebbar-b44973173">
             <i class="fab fa-linkedin"></i>
         </a>
-        <a  class ="btn" href="#">
+        <a  class ="btn" href="https://github.com/Ramyashrihebbar">
+            <i class="fab fa-github"></i>
+        </a>
+        <a  class ="btn" href="https://github.com/Ramyashrihebbar">
+            <i class="fab fa-github"></i>
+        </a>
+        <a  class ="btn" href="https://github.com/Ramyashrihebbar">
             <i class="fab fa-github"></i>
         </a>
     </div>
