--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <i class="fab fa-github"></i>
         </a>
         <a  class ="btn" href="https://github.com/Ramyashrihebbar">
-            <i class="fab fa-github"></i>
+            <i class="fab fa-phone"></i>
         </a>
         <a  class ="btn" href="https://github.com/Ramyashrihebbar">
             <i class="fab fa-github"></i>
