--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li><a href="#"><i class="fas fa-award"></i>certificate</a></li>
             <li><a href="#"><i class="far fa-lightbulb"></i>Skills</a></li>
             <li><a href="#"><i class="fas fa-laptop-code"></i>Projects</a></li>
-            <li><a href="#"><i class="fas fa-envelope"></i>contact me</a></li>
+            <li><a href="contact.html"><i class="fas fa-envelope"></i>contact me</a></li>
         </ul>
     </div>
 
