--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
         <a class ="btn" href="#">
             <i class="fab fa-facebook-f"></i>
         </a>
-        <a class ="btn" href="twitter.com/Ramyash80437111" >
+        <a class ="btn" href="https://twitter.com/Ramyash80437111" >
             <i class="fab fa-twitter"></i>
         </a>
-        <a class ="btn" href="instagram.com/ramyashri_hebbar">
+        <a class ="btn" href="https://www.instagram.com/ramyashri_hebbar">
             <i class="fab fa-instagram"></i>
         </a>
         <a  class ="btn" href="https://www.linkedin.com/in/ramyashri-hebbar-b44973173">
@@ -28,16 +28,19 @@
         <a  class ="btn" href="https://github.com/Ramyashrihebbar">
             <i class="fab fa-github"></i>
         </a>
-        <a  class ="btn" href="https://github.com/Ramyashrihebbar">
-            <i class="fab fa-phone"></i>
+        <a  class ="btn" href="tel:+9663717019">
+            <i class="fa fa-phone" aria-hidden="true"></i>
         </a>
-        <a  class ="btn" href="https://github.com/Ramyashrihebbar">
-            <i class="fab fa-github"></i>
+        <a  class ="btn" href="mailto:ramyashrihebbar501@gmail.com">
+            <i class="fa fa-envelope" aria-hidden="true"></i>
         </a>
     </div>
-    <div class="map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31053.037774750723!2d74.83990961736683!3d13.373285000129139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbca3e9fcf65ef1%3A0xc3495805fb0253d7!2sKukkehalli%2C%20Karnataka%20576124!5e0!3m2!1sen!2sin!4v1596618909766!5m2!1sen!2sin" width="1000" height="100" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>"
+    < div >
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d31053.037774750723!2d74.83990961736683!3d13.373285000129139!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bbca3e9fcf65ef1%3A0xc3495805fb0253d7!2sKukkehalli%2C%20Karnataka%20576124!5e0!3m2!1sen!2sin!4v1596618909766!5m2!1sen!2sin" width="1370" height="200" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
-    
+    <footer>
+        <hr>
+        <code>Copyright (c) 2020 Ramya</code>
+      </footer>
 </body>
 </html>
