--- a/about.html
+++ b/about.html
@@ -10,17 +10,18 @@
 <body>
     <div class="container">
     <div class="rounded"> 
-        <img src="ramya.jpg" alt="" width="300px" height="300px">
+        <img src="ramya.jpg" alt="">
     </div>
         <div class="text">
             <h2> < About me > </About></h2>
             <h2> < About me > </h2>
-            <p class="para"> I am Ramyashi. Tech Enthusiast . Born on 5th January 2001 . My native is Udupi ."Be Hungry for knowledge , the whole thing is to learn everyday." This line keeps  always me motivated.  Curious to know about new technologies.Learning new things and scaling up my skills is my nature.
+            <p class="para"> I am Ramyashri. Tech Enthusiast . Born on 5th January 2001 . My native is Udupi ."Be Hungry for knowledge , the whole thing is to learn everyday." This line keeps  always me motivated.  Curious to know about new technologies.Learning new things and scaling up my skills is my nature.
             
             <br> <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; My love towards technologies inspired me to take up Computer Science  as my degree. Currently I am persuing my third year of Engineering Degree from Sahyadri college of Engineering and management Adyar,Mangalore.
             <br><br><br><button class="btn info"> View Resume</button>
         </p>
         </div>
     </div>
+</div>
 </body>
 </html>
