--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
         <img src="ramya.jpg" alt="">
     </div>
         <div class="text">
-            <h2> < About me > </About></h2>
+            <h2> < About me ></h2>
             <h2> < About me > </h2>
             <p class="para"> I am Ramyashri. Tech Enthusiast . Born on 5th January 2001 . My native is Udupi ."Be Hungry for knowledge , the whole thing is to learn everyday." This line keeps  always me motivated.  Curious to know about new technologies.Learning new things and scaling up my skills is my nature.
             
