--- a/certificate.html
+++ b/certificate.html
@@ -3,9 +3,22 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="certificates.css">
 	<title>Document</title>
 </head>
 <body>
-	
+	<div class="container">
+			<header  id="header">
+			<h2> Certificates</h2>
+            <h2>  Certificates </h2>
+			</header>
+			<div class="box box1"><button class="btn info"> View Resume</button></div>
+			<div class="box box2"> <button class="btn info"> View Resume</button></div>
+			<div class="box box3"><button class="btn info"> View Resume</button></div>
+			<div class="box box4"><button class="btn info"> View Resume</button></div>
+			<div class="box box5"><button class="btn info"> View Resume</button></div>
+			<div class="box box6"><button class="btn info"> View Resume</button></div>
+			<div class="clearfix"></div>
+	</div>
 </body>
 </html>
