--- a/certificate.html
+++ b/certificate.html
@@ -8,17 +8,49 @@
 </head>
 <body>
 	<div class="container">
+		<div class="leaf">
+			<div> <img id="leafSize" src="logo/CL.PNG"></img>
+			</div>
+			<div><img id="leafSize" src="logo/cpp.png"></img>
+			</div>
+			<div> <img id="leafSize" src="logo/git.png"></img>
+			</div>
+			<div><img id="leafSize" src="logo/python.png"></img>
+			</div>
+			<div> <img id="leafSize" src="logo/WEB.png"></img>
+			</div>
+			<div> <img id="leafSize" src="logo/react.png"></div>
+			<div><img id="leafSize" src="logo/git.png"></div>
+
+		</div>
+		<div class="leafTwo">
+            <div> <img id="leafSize" src="logo/java.jpg"></img>
+            </div>
+            <div><img id="leafSize" src="logo/html.jpg"></img>
+            </div>
+            <div> <img id="leafSize" src="logo/js.jpg"></img>
+            </div>
+            <div><img id="leafSize" src="logo/react.png"></img>
+            </div>
+            <div> <img id="leafSize" src="http://www.pngmart.com/files/1/Transparent-Autumn-Leaves-Falling-PNG.png"></img>
+            </div>
+            <div> <img id="leafSize" src="http://www.pngmart.com/files/1/Realistic-Autumn-Fall-Leaves-PNG.png"></div>
+            <div><img id="leafSize" src="http://cdn.clipart-db.ru/rastr/autumn_leaves_025.png"></div>
+
+        </div>
 			<header  id="header">
 			<h2> Certificates</h2>
             <h2>  Certificates </h2>
 			</header>
-			<div class="box box1"><button class="btn info"> View Resume</button></div>
-			<div class="box box2"> <button class="btn info"> View Resume</button></div>
-			<div class="box box3"><button class="btn info"> View Resume</button></div>
-			<div class="box box4"><button class="btn info"> View Resume</button></div>
-			<div class="box box5"><button class="btn info"> View Resume</button></div>
-			<div class="box box6"><button class="btn info"> View Resume</button></div>
+			<div class="box box1"><button class="btn info"><img class="logo" src="logo/python.png"> P Y T H O N</button></div>
+			<div class="box box2"> <button class="btn info"><img class="logo" src="logo/CL.PNG"> &nbsp; &nbsp; &nbsp;C &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</button></div>
+			<div class="box box3"><button class="btn info"><img class="logo" src="logo/cpp.png"> &nbsp; &nbsp;&nbsp;C + +&nbsp;&nbsp;&nbsp;&nbsp;</button></div>
+			<div class="box box4"><button class="btn info"><img class="logo" src="logo/git.png"> &nbsp;&nbsp; G I T&nbsp;&nbsp;&nbsp;</button></div>
+			<div class="box box5"><button class="btn info"><img class="logo" src="logo/WEB.png"> &nbsp;&nbsp; W E B&nbsp;&nbsp;</button></div>
+			<div class="box box6"><button class="btn info"><img class="logo" src="logo/OTHER.png"> OTHERS</button></div>
 			<div class="clearfix"></div>
+			
+	
 	</div>
 </body>
 </html>
