--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+C:\Users\mayur\Github\Ramyashrihebbar.github.io-1\about.html<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <title>About </title>
 </head>
 <body>
-    <div class="loading" id="loader">
+    <!--<div class="loading" id="loader">
         <span class="loader">Loading...</span>
         <span class="animation1"></span>
         <span class="animation2"></span>
@@ -17,14 +17,15 @@
         $(window).on("load", function() {
             $(".loading").fadeOut(500);
         });
-    </script>
+    </script>-->
     <div class="container">
     <div class="rounded"> 
         <img src="ramya.jpg" alt="">
     </div>
-        <div class="text">
             <h2> < About me ></h2>
-            <h2> < About me > </h2>
+            <h2> < About me ></h2>
+        <div class="text">
+            
             <p class="para"> I am Ramyashri. Tech Enthusiast . Born on 5th January 2001 . My native is Udupi ."Be Hungry for knowledge , the whole thing is to learn everyday." This line keeps  always me motivated.  Curious to know about new technologies.Learning new things and scaling up my skills is my nature.
             
             <br> <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; My love towards technologies inspired me to take up Computer Science  as my degree. Currently I am persuing my third year of Engineering Degree from Sahyadri college of Engineering and management Adyar,Mangalore.
