--- a/certificate.html
+++ b/certificate.html
@@ -7,6 +7,7 @@
 	<title>Document</title>
 </head>
 <body>
+	
 	<div class="container">
 		
 			<header  id="header">
@@ -23,5 +24,17 @@
 			
 	
 	</div>
+		<ul class="circles">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+		</ul>
 </body>
 </html>
