--- a/index.html
+++ b/index.html
@@ -31,16 +31,19 @@
         <i class="fas fa-times" id="cancel"></i>
     </label>
     <div class="sidebar">
-        <header>my website</header>
+        <header> Ramyashri</header>
 
         <ul style="list-style-type: none">
             <li><a href="index.html"><i class="fa fa-home"></i>Home</a></li>
             <li><a href="about.html"><i class="fas fa-user"></i>About Me</a></li>
-            <li><a href="#"><i class="fas fa-graduation-cap"></i>education</a></li>
             <li><a href="certificate.html"><i class="fas fa-award"></i>certificate</a></li>
-            <li><a href="#"><i class="far fa-lightbulb"></i>Skills</a></li>
+            <li><a href="skills.html"><i class="far fa-lightbulb"></i>Skills</a></li>
             <li><a href="#"><i class="fas fa-laptop-code"></i>Projects</a></li>
             <li><a href="contact.html"><i class="fas fa-envelope"></i>contact me</a></li>
+            <p class="copy"><br><br> Copyright (c) 2020 Ramya
+                 <br>
+
+            </p>
         </ul>
     </div>
     <section>
