--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <li><a href="about.html"><i class="fas fa-user"></i>About Me</a></li>
             <li><a href="certificate.html"><i class="fas fa-award"></i>certificate</a></li>
             <li><a href="skills.html"><i class="far fa-lightbulb"></i>Skills</a></li>
-            <li><a href="#"><i class="fas fa-laptop-code"></i>Projects</a></li>
+            <li><a href="project.html"><i class="fas fa-laptop-code"></i>Projects</a></li>
             <li><a href="contact.html"><i class="fas fa-envelope"></i>contact me</a></li>
             <p class="copy"><br><br> Copyright (c) 2020 Ramya
                  <br>
