--- a/project.html
+++ b/project.html
@@ -3,10 +3,60 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="aboutme.css">
+    <link rel="stylesheet" href="project.css">
     <title>My Projects</title>
 </head>
 <body>
+    <div class="container">
+        <div class="card">
+            <div class="imgBx" data-text="Web">
+                <img src="images/sketch.png">
+            </div>
+            <div class="content">
+                <div>
+                <h3>My Portfolio</h3>
+                <p>Portfolio website which is designed using html and css </p>
+                <a href="#">View code</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx" data-text="calculator">
+                <img src="images/calci.png">
+            </div>
+            <div class="content">
+                <div>
+                <h3>Loan Calculator</h3>
+                <p>Portfolio website which is designed using html and css </p>
+                <a href="#">View code</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx" data-text="DrumKit">
+                <img src="images/drum.png">
+            </div>
+            <div class="content">
+                <div>
+                <h3>Drum</h3>
+                <p>Portfolio website which is designed using html and css </p>
+                <a href="#">View code</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx" data-text="Earn">
+                <img src="earn.png">
+            </div>
+            <div class="content">
+                <div>
+                <h3>My Portfolio</h3>
+                <p>Portfolio website which is designed using html and css </p>
+                <a href="#">View code</a>
+                </div>
+            </div>
+        </div>
+    </div>
     
 </body>
 </html>
