--- a/about.html
+++ b/about.html
@@ -8,17 +8,17 @@ C:\Users\mayur\Github\Ramyashrihebbar.github.io-1\about.html<!DOCTYPE html>
     <title>About </title>
 </head>
 <body>
-    <!--<div class="loading" id="loader">
-        <span class="loader">Loading...</span>
-        <span class="animation1"></span>
-        <span class="animation2"></span>
+    <div >
+    <a href="#">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  Home
+</a>
     </div>
-    <script>
-        $(window).on("load", function() {
-            $(".loading").fadeOut(500);
-        });
-    </script>-->
     <div class="container">
+
     <div class="rounded"> 
         <img src="ramya.jpg" alt="">
     </div>
