--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ C:\Users\mayur\Github\Ramyashrihebbar.github.io-1\about.html<!DOCTYPE html>
 </head>
 <body>
     <div >
-    <a href="#">
+    <a href="index.html">
   <span></span>
   <span></span>
   <span></span>
