--- a/project.html
+++ b/project.html
@@ -7,6 +7,15 @@
     <title>My Projects</title>
 </head>
 <body>
+    <div >
+    <a href="index.html">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  Home
+</a>
+    </div>
     <div class="container">
         <div class="card">
             <div class="imgBx" data-text="Web">
