--- a/skills.html
+++ b/skills.html
@@ -8,6 +8,15 @@
     <title>Skills</title>
 </head>
 <body>
+    <div >
+    <a href="index.html">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  Home
+</a>
+    </div>
     <div class="inner">
         <div class="header">
             <h1> My skills</h1>
