--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css">
 </head>
 <body>
+    <div >
+    <a href="index.html">
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  Home
+</a>
+    </div>
     <div class="text">
     <h2  > Contact Me </h2>
     <h2 > Contact Me </h2>
