--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-C:\Users\mayur\Github\Ramyashrihebbar.github.io-1\about.html<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
