--- a/project.html
+++ b/project.html
@@ -7,14 +7,7 @@
     <title>My Projects</title>
 </head>
 <body>
-    
-    <a href="index.html">
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  Home
-</a>
+   
     
     <div class="container">
         <div class="card">
@@ -24,8 +17,8 @@
             <div class="content">
                 <div>
                 <h3>My Portfolio</h3>
-                <p>Portfolio website which is designed using html and css </p>
-                <a href="#">View code</a>
+                <p>Portfolio website which is designed using html and css. This is my portfolio Designed and Developed to showcase my work, projects, volunteer experience, and achievements.</p>
+                <a href="https://github.com/Ramyashrihebbar/Ramyashrihebbar.github.io">View Source code</a>
                 </div>
             </div>
         </div>
@@ -36,8 +29,8 @@
             <div class="content">
                 <div>
                 <h3>Loan Calculator</h3>
-                <p>Portfolio website which is designed using html and css </p>
-                <a href="#">View code</a>
+                <p>This calculator is used to calculate the monthly payment based on the inputs . Designed using html , css and javascript. </p>
+                <a href="https://github.com/Ramyashrihebbar/miniProjectsJs/tree/master/loan%20calculator">View Source code</a>
                 </div>
             </div>
         </div>
@@ -48,20 +41,32 @@
             <div class="content">
                 <div>
                 <h3>Drum</h3>
-                <p>Portfolio website which is designed using html and css </p>
-                <a href="#">View code</a>
+                <p>Designed using html,css and javascript code .  </p>
+                <a href="https://github.com/Ramyashrihebbar/miniProjectsJs/tree/master/DrumKit">View Source code</a>
                 </div>
             </div>
         </div>
         <div class="card">
-            <div class="imgBx" data-text="Earn">
-                <img src="earn.png">
+            <div class="imgBx" data-text="List">
+                <img src="images/checklist.png">
             </div>
             <div class="content">
                 <div>
-                <h3>My Portfolio</h3>
-                <p>Portfolio website which is designed using html and css </p>
-                <a href="#">View code</a>
+                <h3>ToDoList</h3>
+                <p> It can store list of tasks or works .Developed using Html, Css and Javascript . </p>
+                <a href="https://github.com/Ramyashrihebbar/to-do-list">View Source code</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="imgBx" data-text="Dice">
+                <img src="images/checklist.png">
+            </div>
+            <div class="content">
+                <div>
+                <h3>Dice Game</h3>
+                <p> Simple Dice Game built using html , css and javascript </p>
+                <a href="https://github.com/Ramyashrihebbar/miniProjectsJs/tree/master/Dice%20game">View Source code</a>
                 </div>
             </div>
         </div>
