--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
             <p class="para"> I am Ramyashri. Tech Enthusiast . Born on 5th January 2001 . My native is Udupi ."Be Hungry for knowledge , the whole thing is to learn everyday." This line keeps  always me motivated.  Curious to know about new technologies.Learning new things and scaling up my skills is my nature.
             
             <br> <br><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; My love towards technologies inspired me to take up Computer Science  as my degree. Currently I am persuing my third year of Engineering Degree from Sahyadri college of Engineering and management Adyar,Mangalore.
-            <br><br><br><button class="btn info"> View Resume</button>
+            <br><br><br><button class="btn info"><a href="Resume.pdf"> View Resume</a></button>
         </p>
         </div>
     </div>
