--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <br><br><br><br>
             <h1 class="name">HELLO , I am Ramyashri </h1><br><br>
             <p class="para"> Tech Enthusiast | Front end web developer | programmer </p><br><br>
-            <button class="btn info">Contact Me</button>
+            <button class="btn info"><a href="contact.html">Contact Me</a></button>
         </div>
         </div>
         <div class="leaf">
