--- a/skills.html
+++ b/skills.html
@@ -82,7 +82,7 @@
             </div>
             
         </div>
-        <p>LEARNING and acquiring new skills is never ending process in my life..</p>
+        <p style="color:White;>LEARNING and acquiring new skills is never ending process in my life..</p>
     </div>
 </body>
 </html>
